--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.0",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
